server-web-next/feat: brand account site as r2f2
